--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -30,10 +30,6 @@
     />
   </head>
   <body>
-    <a
-      href="#"
-      class="link-arrow"
-      >Learn More</a
-    >
+    <span class="badge badge--secondary badge--small">10% off</span>
   </body>
 </html>
