--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     />
   </head>
   <body>
-    <span class="icon-container">
-      <svg class="icon icon--primary">
-        <use xlink:href="./images/sprite.svg#settings"></use>
-      </svg>
-    </span>
+    <button class="btn btn--primary btn--block">Buy Now</button>
+    <button class="btn btn--outline btn--block">Buy Now</button>
+    <a
+      href="#"
+      class="btn btn--secondary btn--block"
+      >Buy Now</a
+    >
   </body>
 </html>
