--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
     />
   </head>
   <body>
-    <button class="btn btn--primary btn--block">Buy Now</button>
-    <button class="btn btn--outline btn--block">Buy Now</button>
-    <a
-      href="#"
-      class="btn btn--secondary btn--block"
-      >Buy Now</a
-    >
+    <input
+      type="text"
+      class="input"
+      placeholder="Enter domain name here..."
+    />
   </body>
 </html>
