--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
         <picture>
           <source
             type="image/webp"
-            srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x"
+            srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"
           />
           <source
             type="image/jpg"
-            srcset="images/ipad.jpg 1x, images/ipad@2x.jpg 2x"
+            srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x"
           />
           <img
             class="feature__image"
-            src="images/ipad@2x.jpg"
+            src="images/wordpress@2x.jpg"
             alt=""
           />
         </picture>
