--- a/index.html
+++ b/index.html
@@ -30,78 +30,85 @@
     />
   </head>
   <body>
-    <footer class="block block--dark footer">
-      <div class="container grid footer__sections">
-        <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Products</h2>
-            <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="./images/sprite.svg#chevron"></use>
-            </svg>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list">
-              <li><a href="#">Website Hosting</a></li>
-              <li><a href="#">Free Automated Wordpress</a></li>
-              <li><a href="#">Wordpress</a></li>
-              <li><a href="#">Migrations</a></li>
-            </ul>
-          </div>
-        </section>
-        <section class="collapsible footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Company</h2>
-            <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="./images/sprite.svg#chevron"></use>
-            </svg>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Affiliates</a></li>
-              <li><a href="#">Blog</a></li>
-            </ul>
-          </div>
-        </section>
-        <section class="collapsible footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Support</h2>
-            <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="./images/sprite.svg#chevron"></use>
-            </svg>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list">
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Knowledge Base</a></li>
-              <li><a href="#">FAQ</a></li>
-            </ul>
-          </div>
-        </section>
-        <section class="collapsible footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Domains</h2>
-            <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="./images/sprite.svg#chevron"></use>
-            </svg>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list">
-              <li><a href="#">Domain Checker</a></li>
-              <li><a href="#">Domain Transfer</a></li>
-              <li><a href="#">Free Domain</a></li>
-            </ul>
-          </div>
-        </section>
-        <section class="footer__brand">
+    <header>
+      <nav class="nav collapsible">
+        <a
+          class="nav__brand"
+          href="/"
+          ><img
+            src="images/logo-mt.png"
+            alt=""
+        /></a>
+        <svg class="icon icon--white nav__toggler">
+          <use xlink:href="./images/sprite.svg#menu"></use>
+        </svg>
+        <ul class="list nav__list collapsible__content">
+          <li class="nav__item"><a href="#">Hosting</a></li>
+          <li class="nav__item"><a href="#">VPS</a></li>
+          <li class="nav__item"><a href="#">Domain</a></li>
+          <li class="nav__item"><a href="#">Pricing</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="block block--dark block--skewed-left hero">
+      <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+          <h1 class="block__heading">Cloud Hosting for Pros</h1>
+          <p class="hero__tagline">
+            Deploy your websites in less than 60 seconds.
+          </p>
+          <a
+            href="#"
+            class="btn btn--accent btn--stretched"
+            >Get Started</a
+          >
+        </header>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
+          />
+          <source
+            type="image/png"
+            srcset="images/banner.png 1x, images/banner@2x.png 2x"
+          />
           <img
-            src="images/logo.svg"
+            class="hero__image"
+            src="images/banner.png"
             alt=""
           />
-          <p class="footer_copyright">Copyright 2023 MTAkbari</p>
-        </section>
+        </picture>
       </div>
-    </footer>
+    </section>
+    <section class="block container block-domain">
+      <header class="block__header">
+        <h2>Starting at $9 per month</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, error.
+        </p>
+      </header>
+      <div class="input-group">
+        <input
+          type="text"
+          class="input"
+          placeholder="Enter domain name here..."
+        />
+        <button class="btn btn--accent">
+          <svg class="icon icon--white">
+            <use xlink:href="./images/sprite.svg#search"></use>
+          </svg>
+          Search
+        </button>
+      </div>
+      <ul class="list block-domain__prices">
+        <li>.com $9</li>
+        <li><span class="badge badge--secondary">.sg $10</span></li>
+        <li>.space $11</li>
+        <li>.info $14</li>
+        <li>.net $10</li>
+        <li>.xyz $10</li>
+      </ul>
+    </section>
 
     <script src="js/main.js"></script>
   </body>
