--- a/index.html
+++ b/index.html
@@ -186,7 +186,10 @@
         </p>
       </header>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content">
+        <div
+          class="feature__content"
+          data-aos="fade-right"
+        >
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="./images/sprite.svg#easy"></use>
@@ -204,7 +207,7 @@
             >Learn More</a
           >
         </div>
-        <picture>
+        <picture data-aos="zoom-in-left">
           <source
             type="image/webp"
             srcset="images/easy.webp 1x, images/easy_2x.webp 2x"
