Search Engine Optimization.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Deploy your websites in less than 60 seconds."
+    />
+    <meta
+      property="og:title"
+      content="MTify..."
+    />
+    <meta
+      property="og:description"
+      content="MTify..."
+    />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      property="og:image"
+      content="https://"
+    />
+    <meta
+      property="og:url"
+      content="https://MTified.com"
+    />
+    <title>MTify | Go Online for Just $9</title>
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
