--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             alt=""
         /></a>
         <svg class="icon icon--white nav__toggler">
-          <use xlink:href="./images/sprite.svg#menu"></use>
+          <use href="./images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -123,7 +123,7 @@
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="./images/sprite.svg#search"></use>
+            <use href="./images/sprite.svg#search"></use>
           </svg>
           Search
         </button>
@@ -216,7 +216,7 @@
         >
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="./images/sprite.svg#easy"></use>
+              <use href="./images/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to Use</h3>
@@ -251,7 +251,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="./images/sprite.svg#easy"></use>
+              <use href="./images/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Simply fast websites</h3>
@@ -286,7 +286,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="./images/sprite.svg#wordpress"></use>
+              <use href="./images/sprite.svg#wordpress"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Wordpress Made Easy</h3>
@@ -342,7 +342,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="./images/sprite.svg#easy"></use>
+                  <use href="./images/sprite.svg#easy"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -359,7 +359,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="./images/sprite.svg#growth"></use>
+                  <use href="./images/sprite.svg#growth"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -376,7 +376,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="./images/sprite.svg#wordpress"></use>
+                  <use href="./images/sprite.svg#wordpress"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -410,7 +410,7 @@
               />
               <span class="icon-container icon-container--accent">
                 <svg class="icon icon--white icon--small">
-                  <use xlink:href="./images/sprite.svg#quotes"></use>
+                  <use href="./images/sprite.svg#quotes"></use>
                 </svg>
               </span>
             </div>
@@ -424,7 +424,7 @@
                 <div class="media">
                   <div class="media__image">
                     <svg class="icon icon--primary quote__line">
-                      <use xlink:href="./images/sprite.svg#line"></use>
+                      <use href="./images/sprite.svg#line"></use>
                     </svg>
                   </div>
                   <div class="media__body">
@@ -461,7 +461,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="./images/sprite.svg#chevron"></use>
+              <use href="./images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -477,7 +477,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="./images/sprite.svg#chevron"></use>
+              <use href="./images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -492,7 +492,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="./images/sprite.svg#chevron"></use>
+              <use href="./images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -507,7 +507,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="./images/sprite.svg#chevron"></use>
+              <use href="./images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
